make tooltip toggle by opacity instead of display to prevent flickering

--- a/styles.css
+++ b/styles.css
@@ -477,7 +477,7 @@ div[value=neg]{
 }
 .tooltip {
 	position:absolute;
-	display:none;
+	opacity:0;
 	color:#666666;
 	font-weight:400;
 	font-size:0.8em;
@@ -486,6 +486,7 @@ div[value=neg]{
 	box-shadow:0em 0em 0.5em #666666;
 	border-radius:0.5em;
 	z-index:4;
+	transition:0.1s all ease-in-out;
 }
 /*spatial*/
 #hall {
